feat: hero section

--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 ---
 layout: default
 
+hero-title: Reclaim your digital sovereignity
+hero-subtitle: Share and manage files and internal systems without moving to the cloud
+hero-description: <span class="company-name">Diode<span>TM</span></span> lets you retain the security and privacy of a local area network while enabling the convenience of remote accessibility - all without IT admins.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 about-title: Look mum, no server!
 about-description: >-
     The Diode P2P network allows any device on the planet to directly serve secured content to the public Internet. 
@@ -58,7 +75,7 @@ features:
 
 {% include header.html %}
 
-{% include sections/about.html %}
+{% include sections/hero.html %}
 
 {% include sections/features.html %}
 
