--- a/index.html
+++ b/index.html
@@ -64,10 +64,6 @@ about-description: >-
 
 {% include sections/features.html %}
 
-{% include sections/offer.html offer-text="Follow us on twitter!" button-text="@diode_chain" link="https://twitter.com/diode_chain" %}
+{% include sections/offer.html offer-text="Join the conversation on Telegram" button-text="@diode_chain" link="https://t.me/diode_chain" %}
 
 {% include sections/blog.html %}
-
-{% include sections/offer.html offer-text="Chat with us on telegram!" button-text="@diode_chain" link="https://t.me/diode_chain" %}
-
-{% include sections/team.html %}
