fix: downloads links

--- a/resources/download/index.html
+++ b/resources/download/index.html
@@ -20,27 +20,7 @@ downloads:
     choices:
       - title: Download Diode CLI
         description: Download the binary for your operating system
-        downloads:
-          - title: Raspberry Pi (ARM)
-            icon: /images/raspberry-p-logo.png
-            active-icon: something
-            link: something
-          - title: MacOS X
-            icon: /images/apple-logo.svg
-            active-icon: something
-            link: something
-          - title: MacOS package
-            icon: /images/mac-os-package.svg
-            active-icon: something
-            link: something
-          - title: Windows (64bit)
-            icon: /images/windows-logo.svg
-            active-icon: something
-            link: something
-          - title: Linux (64-bit)
-            icon: /images/linux-logo.png
-            active-icon: something
-            link: x
+        downloads: true
       - title: Unzip and Install
         description: Unzip the CLI. On Windows, you can double click it.
         command: $ unzip Downloads/diode_windows_amd64.zip
