feat: hero section responsivness

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@ hero-title: Reclaim your digital sovereignity
 hero-subtitle: Share and manage files and internal systems without moving to the cloud
 hero-description: <span class="company-name">Diode<span>TM</span></span> lets you retain the security and privacy of a local area network while enabling the convenience of remote accessibility - all without IT admins.
 
+hero-xs-title: Web3 technologies <br/> for remote productivity
+hero-xs-subtitle: Turn your on-premise system into a hybrid solution overnight.
+hero-xs-description: At Diode, we help businesses, professionals, and individuals to retain the security and privacy of a local area network while enabling mobile sharing and accessibility.
+
 
 
 features:
