--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ features:
   - title: Remote Work
     description: >-
       Diode is a great choice for businesses and individuals who want to keep their files on their local systems, but need to unlock the efficiencies that come with remote access.  Files are stored on your hard-drive, but can be shared with employees, partners, and customers as easily as cloud-based solutions.  Both native file synchronization and web-based sharing are supported, and permissions can be managed at a granular level.
+    xs-title: Hybrid Systems
+    xs-description: Diode offers a suite of security technologies that make it easy to share files, intranet websites, and network access with partners and employees without exposing your systems to the outside world.  Our serverless technology retains compliance with your existing regulatory regime, and does not require IT support to maintain.  A Diode productivity solution is a great choice for businesses and individuals who want to retain privacy and control, but need to unlock the efficiencies that come with remote access.
     icon: svgs/remote-work.svg
     link-text: Solutions for remote Work
     link-url: https://www.electromaker.io/tutorial/blog/raspberry-pi-vpn-server
@@ -24,6 +26,8 @@ features:
   - title: Data Sovereignity
     description: >-
       For too long, people have been trading privacy and data sovereignity for convenience, often against their better judgement!  Diode’s technologies enable every person and every business to reclaim sovereignity over their information, while also enabling all of the efficiency and access improvements that come with cloud-first storage solutions.  Our serverless technology retains compliance with your existing regulatory regime, and does not require IT support to maintain.
+    xs-title: Decentralized Communications
+    xs-description: Our decentralized routing and communications network is end to end encrypted and can handle all types of work loads.  Communications over the network are extremely resilient - they can initiate via any available node and they look just like any other secure Internet communication.  The Diode Network is the perfect solution for organizations building inherently secure communication applications, or looking to replace in-house relay servers that are not core competence.
     icon: svgs/data-sovereignity.svg
     link-text: Benefits for Compliance WITH Regulatory Regimes
     link-url: https://www.electromaker.io/tutorial/blog/raspberry-pi-vpn-server
@@ -32,6 +36,8 @@ features:
   - title: No IT Administration
     description: >-
       Other solutions require you to implement complicated IT technologies to manage sharing, or force you to use centrally managed servers that often have questionable privacy policies.  These alternatives require you to choose the lesser of two evils - a brittle, complicated, and costly IT system or a simpler system that requires undue trust in a third party vendor.  Both of these bad alternatives introduce points of vulnerability.  Diode brings the best of both worlds - our servers are fully trustless and open source, eliminating attack vectors and proving the security of your valuable data.  
+    xs-title: Web3 Devices
+    xs-description: The Diode Network is the only public infrastructure that supports fully trustless interactions with devices and computing systems.  New types of Internet-based serverless devices are now possible, such as video cameras <Streaming Video (link to blog post on cameras)>, website hosting servers <Web3 Hosting>, file servers <Private Storage>, and IoT sensors <IoT>.  By building a Web3 device around Diode, product manufacturers get all of the security and connectivity of an Internet-based device, with none of the complexities or cost of cloud vendors, IT maintenance, or software upgrades.
     icon: svgs/no-it-administration.svg
     link-text: How It Works
     link-url: https://www.electromaker.io/tutorial/blog/raspberry-pi-vpn-server
