--- a/solutions/healthcare-and-compliance/index.html
+++ b/solutions/healthcare-and-compliance/index.html
@@ -1,7 +1,7 @@
 ---
-layout: default
-title: Solutions for Regulated Industries
-description: Retain your hard-earned compliance with regulatory regimes while introducing light weight solutions for remote connectivity.
+layout: solutions
+page-title: Solutions for Regulated Industries
+page-description: Retain your hard-earned compliance with regulatory regimes while introducing light weight solutions for remote connectivity.
 solutions:
   - title: Keep Files Onsite
     description: Use dDrive to manage remote access to your on-site records for agencies, goverment and service providers without VPNs or other complicated IT systems. 
@@ -9,29 +9,4 @@ solutions:
     description: Other sites in your network can be given access to the files they need without any managed servers in the middle and without any IT setup required. 
   - title: Regulatory Compliance
     description: Retain your compliance with HIPAA, GDPR, and more through regionality,  E2E encryption, and explicit cryptographic validation of every access by a subscriber.
-
-downloads:
-  - title: dDRIVE
-    description: dDrive combines the privacy and compliance benefits of local storage with the benefits and efficiency of remote access.
-    link-url: https://
-    link-text: GET dDrive
-    icon: /images/diode-drive.png
-
-  - title: DIODE CLI
-    description: The Diode CLI is used to maintain systems in hard-to-access facilities and to securely publish data streams and web properties.
-    link-url: https://
-    link-text: GET DIODE CLI
-    icon: /images/diode-client.png
-contact_us:
-  link: http://
-  text: The Diode team loves seeing how our products enable people and businesses to regain control and privacy of their information and systems.  If there is an opportunity to help you find the right balance for your endeavor, please get in touch!
 ---
-
-{% include header.html %}
-
-{% include breadcrumbs.html %}
-
-{% include sections/solutions.html %}
-{% include sections/solutions-download.html %}
-
-{% include sections/blog.html %}
