--- a/solutions/remote-work/index.html
+++ b/solutions/remote-work/index.html
@@ -1,7 +1,7 @@
 ---
-layout: default
-title: Enable Your Remote Workforce
-description: Leave your on-premise systems in place and use Diode to give remote collaborators the access they need.
+layout: solutions
+page-title: Enable Your Remote Workforce
+page-description: Leave your on-premise systems in place and use Diode to give remote collaborators the access they need.
 solutions:
   - title: Team File Access
     description: Use dDrive to grant and manage remote access to your on-site files without VPNs or other complicated IT systems.  It works just like a folder on their computer.
@@ -9,29 +9,5 @@ solutions:
     description: Share files and data rooms with partners and customers using dDrive’s web-sharing feature.  Have visibility into what is being accessed and by who.
   - title: Intranet Websites
     description: Securely publish internal knowledge base websites and other web-based tools to your remote team, and/or select partners, using the Diode CLI.
-
-downloads:
-  - title: dDRIVE
-    description: dDrive combines the privacy and compliance benefits of local storage with the benefits and efficiency of remote access.
-    link-url: https://
-    link-text: GET dDrive
-    icon: /images/diode-drive.png
-
-  - title: DIODE CLI
-    description: The Diode CLI is used to maintain systems in hard-to-access facilities and to securely publish data streams and web properties.
-    link-url: https://
-    link-text: GET DIODE CLI
-    icon: /images/diode-client.png
-contact_us:
-  link: http://
-  text: The Diode team loves seeing how our products enable people and businesses to regain control and privacy of their information and systems.  If there is an opportunity to help you find the right balance for your endeavor, please get in touch!
 ---
 
-{% include header.html %}
-
-{% include breadcrumbs.html %}
-
-{% include sections/solutions.html %}
-{% include sections/solutions-download.html %}
-
-{% include sections/blog.html %}
