--- a/solutions/streaming-video/index.html
+++ b/solutions/streaming-video/index.html
@@ -1,7 +1,7 @@
 ---
-layout: default
-title: Create Video Streams Everywhere
-description: Publish public or private streams of real time video from security cameras, webcams, and embedded devices.
+layout: solutions
+page-title: Create Video Streams Everywhere
+page-description: Publish public or private streams of real time video from security cameras, webcams, and embedded devices.
 solutions:
   - title: Video Replication
     description: No matter the capability of the video camera, streams are scaled by the Diode Network automatically based on subscriber demand.
@@ -12,29 +12,4 @@ solutions:
     description: Every video stream can be assigned a public URL that can be distributed to event attendees, embedded into a website, or published as a community service.
   - title: Private Streams
     description: Viewer access can be restricted to specific individuals or authorized groups when you want to keep the content private.
-
-downloads:
-  - title: dDRIVE
-    description: dDrive combines the privacy and compliance benefits of local storage with the benefits and efficiency of remote access.
-    link-url: https://
-    link-text: GET dDrive
-    icon: /images/diode-drive.png
-
-  - title: DIODE CLI
-    description: The Diode CLI is used to maintain systems in hard-to-access facilities and to securely publish data streams and web properties.
-    link-url: https://
-    link-text: GET DIODE CLI
-    icon: /images/diode-client.png
-contact_us:
-  link: http://
-  text: The Diode team loves seeing how our products enable people and businesses to regain control and privacy of their information and systems.  If there is an opportunity to help you find the right balance for your endeavor, please get in touch!
 ---
-
-{% include header.html %}
-
-{% include breadcrumbs.html %}
-
-{% include sections/solutions.html %}
-{% include sections/solutions-download.html %}
-
-{% include sections/blog.html %}
