chore: products sections

--- a/products/d-drive/index.html
+++ b/products/d-drive/index.html
@@ -1,7 +1,7 @@
 ---
-layout: default
-title: dDrive
-description: A cloud experience for local storage
+layout: products
+header-title: dDrive
+header-description: A cloud experience for local storage
 
 header-image: /images/twitter_head.jpg
 header-image-description: dDrive combines the privacy and compliance benefits of local storage with the benefits and efficiency of remote access.
@@ -21,8 +21,3 @@ body-features:
 footer-video: https://www.youtube-nocookie.com/embed/Zibg-6CClc4
 ---
 
-{% include header.html %}
-
-{% include breadcrumbs.html %}
-
-{% include sections/products.html %}
