--- a/products/diode-cli/index.html
+++ b/products/diode-cli/index.html
@@ -1,7 +1,7 @@
 ---
-layout: default
-title: Diode CLI
-description: Serverless remote access to digital assets
+layout: products
+header-title: Diode CLI
+header-description: Serverless remote access to digital assets
 
 header-image: /images/twitter_head.jpg
 header-image-description: Maintain systems in hard-to-access facilities.  Securely publish data streams and web properties.
@@ -20,9 +20,3 @@ body-features:
 
 footer-video: https://www.youtube-nocookie.com/embed/Zibg-6CClc4
 ---
-
-{% include header.html %}
-
-{% include breadcrumbs.html %}
-
-{% include sections/products.html %}
