--- a/products/diode-network/index.html
+++ b/products/diode-network/index.html
@@ -1,7 +1,7 @@
 ---
-layout: default
-title: Diode Network
-description: The world’s only trustless communications network
+layout: products
+header-title: Diode Network
+header-description: The world’s only trustless communications network
 
 header-image: /images/twitter_head.jpg
 header-image-description: Deploy sustainable networks of devices, applications, and communication systems with zero network config or maintenance.
@@ -21,8 +21,3 @@ body-features:
 footer-video: https://www.youtube-nocookie.com/embed/Zibg-6CClc4
 ---
 
-{% include header.html %}
-
-{% include breadcrumbs.html %}
-
-{% include sections/products.html %}
