--- a/products/pricing/index.html
+++ b/products/pricing/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: dDrive Plans and Pricing
-description: Our mission is to empower secure communication with edge infrastructure. 
+header-title: dDrive Plans and Pricing
+header-description: Our mission is to empower secure communication with edge infrastructure. 
 
 plans:
   - title: Nomad
