feat: download xs

--- a/resources/download/index.html
+++ b/resources/download/index.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 header-title: Download
-header-description: Our mission is to empower secure communication with edge infrastructure.
-text: <p>Everything we do at Diode is to enable individuals and organizations to securely connect with their edge infrastructure.  Diode applications, such as dDrive and the Diode CLI, enable secure remote access to on-premise assets, files, and software with minimal setup and maintenance effort.  The Diode Network makes all this possible by enabling a world where it is sustainable to provide category leading software without exploiting user data.</p><p>Today, the team at Diode is busy developing next generation Diode applications, expanding the capabilities of the Diode Network, and growing our base of customers, partners, and developers.</p><p>Please get in touch if you’d like to explore a collaboration with Diode!</p>
+header-description: Get started with Diode℠ in just few seconds!
 
 choices:
   - title: Download Diode CLI
