--- a/resources/how-it-works/index.html
+++ b/resources/how-it-works/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: How It Works
-description: Diode enables the Web3 for everyone
+header-title: How It Works
+header-description: Diode enables the Web3 for everyone
 
 video: https://www.youtube-nocookie.com/embed/Zibg-6CClc4
 
