feat: plan features

--- a/products/pricing/index.html
+++ b/products/pricing/index.html
@@ -21,63 +21,91 @@ items:
   - title: Drives
     plans:
       - value: <div class="ammount">1</div><div class="ammount--tip">+ $5 / Drive</div>
+        xs-value: 1 + $5 / Drive
       - value: <div class="ammount">1</div><div class="ammount--tip">+ $5 / Drive</div>
+        xs-value: 1 + $5 / Drive
       - value: <div class="ammount">1</div><div class="ammount--tip">+ $20 / Drive</div>
+        xs-value: 1 + $20 / Drive
   - title: Users / Shares
     plans:
       - value: <div class="has-asterisk">Unlimited</div>
+        xs-value: No 
       - value: <div class="ammount">10</div><div class="ammount--tip">+ $3 / User</div>
+        xs-value: 10 + $3 / User 
       - value: <div class="ammount">20</div><div class="ammount--tip">+ $6 / Drive</div>
+        xs-value: 10 + $6 / User 
   - title: Storage
     plans:
       - value: Unlimited
+        xs-value: Unlimited Storage
       - value: Unlimited
+        xs-value: Unlimited Storage
       - value: Unlimited
+        xs-value: Unlimited Storage
   - title: Link Sharing
     plans:
       - value: No
+        xs-value: No
       - value: Yes
+        xs-value: Link Sharing
       - value: Data Room
+        xs-value: Link Sharing (Data Room)
   - title: Web Access
     plans:
       - value: No
+        xs-value: No
       - value: Yes
+        xs-value: Web Access
       - value: Yes
+        xs-value: Web Access
   - title: Sub-Folder Permissions
     plans:
       - value: No
+        xs-value: No
       - value: Yes
+        xs-value: Sub-Folder Permissions
       - value: Administrated
+        xs-value: Sub-Folder Permissions (Admin)
   - title: Versions
     plans:
       - value: No
+        xs-value: No
       - value: No
+        xs-value: No
       - value: Yes
+        xs-value: Versions
   - title: Backup / Headless
     plans:
       - value: Via Share
+        xs-value: Via Share (Backup / Headless)
       - value: On Premise
+        xs-value: On Premise (Backup / Headless)
       - value: Hosted
+        xs-value: Hosted (Backup / Headless)
   - title: Web Access
     plans:
       - value: No
+        xs-value: No
       - value: Yes
+        xs-value: Web Access
       - value: Yes
+        xs-value: Web Access
   - title: QOS
     plans:
       - value: Per Availability
+        xs-value: Per Availability (QOS)
       - value: Basic
+        xs-value: Basic (QOS)
       - value: Premium
-  - title: Web Access
-    plans:
-      - value: No
-      - value: Yes
-      - value: Yes
+        xs-value: Premium (QOS)
   - title: Support
     plans:
       - value: None
+        xs-value: None
       - value: Basic
+        xs-value: Basic Support
       - value: Premium
+        xs-value: Premium Support
 
 ---
 
