--- a/products/diode-network/index.html
+++ b/products/diode-network/index.html
@@ -3,20 +3,20 @@ layout: products
 header-title: Diode Network
 header-description: The world’s only trustless communications network
 
-header-image: /images/twitter_head.jpg
+header-image: images/twitter_head.jpg
 header-image-description: Deploy sustainable networks of devices, applications, and communication systems with zero network config or maintenance.
 
 body-text: <i>“The Diode Network’s use of the Nakamoto Consensus to secure trustless communications is a world-changing innovation.”</i> - Professor, Tai Da University
 body-features:
   - title: No IT Maintenance
     description: Businesses, application developers, and product manufacturers get all of the security and connectivity of server-based communications, with none of the complexities or cost of cloud vendors, IT maintenance, or software upgrades.
-    icon: /images/money-off.svg
+    icon: images/money-off.svg
   - title: Trustless Communications
     description: The Diode Network uses the <a href="#">BlockQuick algorithm</a> to establish trustless communications between connected clients.  This allows the Diode Network to operate as a sustainable open public network supporting all types of applications.
-    icon: /images/screen-lock.svg
+    icon: images/screen-lock.svg
   - title: Support for Simple Devices
     description: No other trustless network in the world can support the needs of IoT devices and computer applications.  The Diode Network supports communications with as little as 20kB of storage and bandwidth - enabling every level of device capability.
-    icon: /images/movie.svg
+    icon: images/movie.svg
 
 footer-video: https://www.youtube-nocookie.com/embed/Zibg-6CClc4
 ---
