fix: home page links

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ features:
     xs-description: Diode offers a suite of security technologies that make it easy to share files, intranet websites, and network access with partners and employees without exposing your systems to the outside world.  Our serverless technology retains compliance with your existing regulatory regime, and does not require IT support to maintain.  A Diode productivity solution is a great choice for businesses and individuals who want to retain privacy and control, but need to unlock the efficiencies that come with remote access.
     icon: svgs/remote-work.svg
     link-text: Solutions for remote Work
-    link-url: /solutions/remote-work/
+    link-url: solutions/remote-work/
 
   ### Feature 2
   - title: Data Sovereignity
@@ -32,7 +32,7 @@ features:
     link-text: Benefits for Compliance WITH Regulatory Regimes
 
     ### TODO: the link should be resolved
-    link-url: /products/d-drive/
+    link-url: products/d-drive/
 
   ### Feature 3
   - title: No IT Administration
@@ -42,7 +42,7 @@ features:
     xs-description: The Diode Network is the only public infrastructure that supports fully trustless interactions with devices and computing systems.  New types of Internet-based serverless devices are now possible, such as video cameras <Streaming Video (link to blog post on cameras)>, website hosting servers <Web3 Hosting>, file servers <Private Storage>, and IoT sensors <IoT>.  By building a Web3 device around Diode, product manufacturers get all of the security and connectivity of an Internet-based device, with none of the complexities or cost of cloud vendors, IT maintenance, or software upgrades.
     icon: svgs/no-it-administration.svg
     link-text: How It Works
-    link-url: /resources/how-it-works/
+    link-url: resources/how-it-works/
 ---
 
 {% include header.html %} {% include sections/hero.html %} {% include
