fix: pricing page

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-header-title: dDrive Plans and Pricing
+header-title: Plans and Pricing
 header-description: Our mission is to empower secure communication with edge infrastructure. 
 
 plans:
