--- a/solutions/healthcare-and-compliance/index.html
+++ b/solutions/healthcare-and-compliance/index.html
@@ -9,4 +9,17 @@ solutions:
     description: Other sites in your network can be given access to the files they need without any managed servers in the middle and without any IT setup required. 
   - title: Regulatory Compliance
     description: Retain your compliance with HIPAA, GDPR, and more through regionality,  E2E encryption, and explicit cryptographic validation of every access by a subscriber.
+downloads:
+  - title: dDrive
+    xs-title: Diode Drive
+    description: dDrive combines the privacy and compliance benefits of local storage with the benefits and efficiency of remote access.
+    icon: images/diode-drive.png
+    button: GET dDRIVE
+    link: resources/download
+  - title: Diode CLI
+    xs-title: Diode Client
+    description: The Diode CLI is used to maintain systems in hard-to-access facilities and to securely publish data streams and web properties.
+    icon: images/diode-client.png
+    button: GET Diode CLI
+    link: resources/download
 ---
