--- a/solutions/remote-work/index.html
+++ b/solutions/remote-work/index.html
@@ -9,5 +9,18 @@ solutions:
     description: Share files and data rooms with partners and customers using dDrive’s web-sharing feature.  Have visibility into what is being accessed and by who.
   - title: Intranet Websites
     description: Securely publish internal knowledge base websites and other web-based tools to your remote team, and/or select partners, using the Diode CLI.
+downloads:
+  - title: dDrive
+    xs-title: Diode Drive
+    description: dDrive combines the privacy and compliance benefits of local storage with the benefits and efficiency of remote access.
+    icon: images/diode-drive.png
+    button: GET dDRIVE
+    link: resources/download
+  - title: Diode CLI
+    xs-title: Diode Client
+    description: The Diode CLI is used to maintain systems in hard-to-access facilities and to securely publish data streams and web properties.
+    icon: images/diode-client.png
+    button: GET Diode CLI
+    link: resources/download
 ---
 
