fix: pricing page design

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -6,16 +6,44 @@ header-description: Our mission is to empower secure communication with edge inf
 plans:
   - title: Nomad
     description: Try it out!  Great plan for yourself, friends, and family.
-    price: 0,
+    price: 
+      yearly: 0
+      monthly: 0
     action: https://
+    items:
+      - title: Privately share full drive
+      - title: Unlimited shares
+      - title: Unlimited storage
+
   - title: Business
     description: Perfect for small businesses and multi-site operations.
-    price: 49,
+    price:
+      yearly: 39
+      monthly: 49
     action: https://
+    items:
+      - title: All Nomad +
+      - title: Link sharing
+      - title: Web access
+      - title: Subfolder permissions
+      - title: Headless backups
+      - title: Business support
+
+
   - title: Enterprise
     description: For advanced IT and team collaboration needs.
-    price: 199,
+    price:
+      yearly: 159
+      monthly: 199
     action: https://
+    items:
+      - title: All Business +
+      - title: Data room insights
+      - title: User administration
+      - title: Versioning and recovery
+      - title: Private cloud backups
+      - title: Priority bandwidth
+      - title: Enterprise support
 
 items:
   - title: Drives
@@ -110,7 +138,6 @@ items:
 ---
 
 {% include header.html %}
-
 {% include breadcrumbs.html %}
 
 {% include sections/products-pricing.html %}
