Updated dDrive copy

--- a/products/d-drive/index.html
+++ b/products/d-drive/index.html
@@ -1,23 +1,23 @@
 ---
 layout: products
 header-title: dDrive
-header-description: A cloud experience for local storage
+header-description: Private and convenient file sharing, collaboration and backup.
 
 header-image: images/twitter_head.jpg
-header-image-description: dDrive combines the privacy and compliance benefits of local storage with the benefits and efficiency of remote access.
+header-image-description: dDrive combines the privacy and compliance benefits of local storage with the convenience and efficiency of remote access.
 
-body-text: <i>“dDrive allowed us to keep control of our files while reducing the IT burden required to make them accessible to our team and customers”</i> - CEO, Medical Scribing Company
+body-text: <i>“dDrive allows us to keep control of our files while reducing the IT burden required to make them accessible to our team and customers”</i> - CEO, Medical Scribing Company
 body-features:
   - title: Privacy
-    description: A serverless solution using end-to-end encryption to share files with collaborators.  There is no server system in the middle with suspicious privacy policies offering you a free service in return for access to your data.
+    description: A serverless solution using end-to-end encryption to share files with collaborators.  There is no server system in the middle with questionable privacy policies offering you a free service in return for access to your data.
     icon: images/shield.svg
   - title: Cloud Experience
-    description: A cloud experience for local storage.  Files are stored locally, are automatically synchronized with collaborators’ computers, and can be accessed without installation via the dDrive web interface (if enabled).
+    description: A cloud experience for local files.  Files are stored locally, are automatically synchronized with collaborators’ computers, and can be accessed without installation via the dDrive web interface (if enabled).
     icon: images/cloud.svg
   - title: Enterprise Features
-    description: A low-barrier way to implement a hybrid storage solution.  Enterprise features include backup, multi-master replication, granular permission management, and private web sharing with audit trails.
+    description: A low-barrier way to implement a hybrid storage solution.  Enterprise features include private cloud backups, version management, granular permissions, and private web sharing with audit trails.
     icon: images/headsets.svg
 
-footer-video: https://www.youtube-nocookie.com/embed/Zibg-6CClc4
+footer-video: https://vimeo.com/485506439
 ---
 
