--- a/products/d-drive/index.html
+++ b/products/d-drive/index.html
@@ -20,4 +20,6 @@ body-features:
 
 footer-video: https://vimeo.com/485506439
 ---
+<iframe src="https://player.vimeo.com/video/485506439" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/485506439">Diode Drive Introduction</a> from <a href="https://vimeo.com/user118013300">Diode Webmaster</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
