--- a/products/d-drive/index.html
+++ b/products/d-drive/index.html
@@ -18,5 +18,5 @@ body-features:
     description: A low-barrier way to implement a hybrid storage solution.  Enterprise features include private cloud backups, version management, granular permissions, and private web sharing with audit trails.
     icon: images/headsets.svg
 
-footer-video: https://vimeo.com/485506439
+footer-video: https://player.vimeo.com/video/485506439
 ---
