Updating new image

--- a/products/d-drive/index.html
+++ b/products/d-drive/index.html
@@ -3,7 +3,7 @@ layout: products
 header-title: dDrive
 header-description: Private and convenient file sharing, collaboration and backup.
 
-header-image: images/twitter_head.jpg
+header-image: images/ddrive-quadrant.png
 header-image-description: dDrive combines the privacy and compliance benefits of local storage with the convenience and efficiency of remote access.
 
 body-text: <i>“dDrive allows us to keep control of our files while reducing the IT burden required to make them accessible to our team and customers”</i> - CEO, Medical Scribing Company
