--- a/products/d-drive/index.html
+++ b/products/d-drive/index.html
@@ -1,7 +1,7 @@
 ---
 layout: products
 header-title: dDrive
-header-description: Private and convenient file sharing, collaboration and backup.
+header-description: Private and convenient file sharing, collaboration, and backup.
 
 header-image: images/ddrive-quadrant.png
 header-image-description: dDrive combines the privacy and compliance benefits of local storage with the convenience and efficiency of remote access.
