--- a/products/d-drive/index.html
+++ b/products/d-drive/index.html
@@ -3,11 +3,11 @@ layout: products
 header-title: dDrive
 header-description: Private and convenient file sharing, collaboration, and backup.
 
-header-image: images/ddrive-quadrant.png
+header-image: 
 header-video: https://player.vimeo.com/video/485506439
 header-image-description: dDrive combines the privacy and compliance benefits of local storage with the convenience and efficiency of remote access.
 header-action-text: TRY DIODE DRIVE
-header-action-link: /download
+header-action-link: {{ site.links.download }}
 
 body-text: <i>“dDrive allows us to keep control of our files while reducing the IT burden required to make them accessible to our team and customers”</i> - CEO, Medical Scribing Company
 body-features:
