--- a/products/d-drive/index.html
+++ b/products/d-drive/index.html
@@ -7,7 +7,7 @@ header-image:
 header-video: https://player.vimeo.com/video/485506439
 header-image-description: dDrive combines the privacy and compliance benefits of local storage with the convenience and efficiency of remote access.
 header-action-text: TRY DIODE DRIVE
-header-action-link: {{ site.links.download }}
+header-action-link: /resources/download
 
 body-text: <i>“dDrive allows us to keep control of our files while reducing the IT burden required to make them accessible to our team and customers”</i> - CEO, Medical Scribing Company
 body-features:
