--- a/products/diode-cli/index.html
+++ b/products/diode-cli/index.html
@@ -4,7 +4,11 @@ header-title: Diode CLI
 header-description: Serverless remote access to digital assets
 
 header-image: images/twitter_head.jpg
+header-video: 
 header-image-description: Maintain systems in hard-to-access facilities.  Securely publish data streams and web properties.
+header-action-text: TRY DIODE CLI
+header-action-link: resources/download
+
 
 body-text: <i>“We use the Diode CLI as a secure network layer to access our routers and IT assets without the hassle of VPN.”</i> - CTO, 5G Services Firm
 body-features:
