--- a/products/diode-network/index.html
+++ b/products/diode-network/index.html
@@ -4,7 +4,10 @@ header-title: Diode Network
 header-description: The world’s only trustless communications network
 
 header-image: images/twitter_head.jpg
+header-video:
 header-image-description: Deploy sustainable networks of devices, applications, and communication systems with zero network config or maintenance.
+header-action-text: VIEW THE EXPLORER
+header-action-link: prenet/
 
 body-text: <i>“The Diode Network’s use of the Nakamoto Consensus to secure trustless communications is a world-changing innovation.”</i> - Professor, Tai Da University
 body-features:
