--- a/pricing/index.html
+++ b/pricing/index.html
@@ -48,20 +48,20 @@ plans:
 items:
   - title: Drives
     plans:
-      - value: <div class="ammount">1</div><div class="ammount--tip">+ $5 / Drive</div>
-        xs-value: 1 + $5 / Drive
-      - value: <div class="ammount">1</div><div class="ammount--tip">+ $5 / Drive</div>
-        xs-value: 1 + $5 / Drive
-      - value: <div class="ammount">1</div><div class="ammount--tip">+ $20 / Drive</div>
-        xs-value: 1 + $20 / Drive
+      - value: <div class="ammount">1</div><div class="ammount--tip">+ $5 / Drive / Mo</div>
+        xs-value: 1 + $5 / Drive / Mo
+      - value: <div class="ammount">1</div><div class="ammount--tip">+ $5 / Drive / Mo</div>
+        xs-value: 1 + $5 / Drive / Mo
+      - value: <div class="ammount">1</div><div class="ammount--tip">+ $20 / Drive / Mo</div>
+        xs-value: 1 + $20 / Drive / Mo
   - title: Users / Shares
     plans:
       - value: <div class="has-asterisk">Unlimited</div>
         xs-value: No 
-      - value: <div class="ammount">10</div><div class="ammount--tip">+ $3 / User</div>
-        xs-value: 10 + $3 / User 
-      - value: <div class="ammount">20</div><div class="ammount--tip">+ $6 / Drive</div>
-        xs-value: 10 + $6 / User 
+      - value: <div class="ammount">10</div><div class="ammount--tip">+ $3 / User / Mo</div>
+        xs-value: 10 + $3 / User / Mo
+      - value: <div class="ammount">20</div><div class="ammount--tip">+ $6 / Drive / Mo</div>
+        xs-value: 10 + $6 / User / Mo 
   - title: Storage
     plans:
       - value: Unlimited
