--- a/products/diode-network/index.html
+++ b/products/diode-network/index.html
@@ -1,7 +1,7 @@
 ---
 layout: products
 header-title: Diode Network
-header-description: The world’s only trustless communications network
+header-description: The world’s only fully trustless communications network
 
 header-image: images/twitter_head.jpg
 header-video:
@@ -15,7 +15,7 @@ body-features:
     description: Businesses, application developers, and product manufacturers get all of the security and connectivity of server-based communications, with none of the complexities or cost of cloud vendors, IT maintenance, or software upgrades.
     icon: images/money-off.svg
   - title: Trustless Communications
-    description: The Diode Network uses the <a href="blockchain/how-blockquick-super-light-client-protocol-can-help-mitigate-eclipse-attacks-19161/">BlockQuick algorithm</a> to establish trustless communications between connected clients.  This allows the Diode Network to operate as a sustainable open public network supporting all types of applications.
+    description: The Diode Network uses the <a href="burning-platform-pki/blockquick-super-light-blockchain-client-for-trustless-time-19144/">BlockQuick algorithm</a> to establish trustless communications between connected clients.  This allows the Diode Network to operate as a sustainable open public network supporting all types of applications.
     icon: images/screen-lock.svg
   - title: Support for Simple Devices
     description: No other trustless network in the world can support the needs of IoT devices and computer applications.  The Diode Network supports communications with as little as 20kB of storage and bandwidth - enabling every level of device capability.
