--- a/products/diode-cli/index.html
+++ b/products/diode-cli/index.html
@@ -10,7 +10,7 @@ header-action-text: TRY DIODE CLI
 header-action-link: resources/download
 
 
-body-text: <i>“We use the Diode CLI as a secure network layer to access our routers and IT assets without the hassle of VPN.”</i> - CTO, 5G Services Firm
+body-text: <i>“We use the Diode CLI as a secure network client to access our routers and IT assets without the hassle of VPN.”</i> - CTO, 5G Services Firm
 body-features:
   - title: Website Hosting
     description: A free replacement for nGrok and DDNS.  Not only do you get access-managed subdomains for your web development environment, you can locally host websites that are published without any centralized technologies (e.g. DNS or ICANN).
