--- a/products/diode-network/index.html
+++ b/products/diode-network/index.html
@@ -4,7 +4,7 @@ header-title: Diode Network
 header-description: The world’s only fully trustless communications network
 
 header-image: images/twitter_head.jpg
-header-video:
+header-video: https://www.youtube-nocookie.com/embed/B-bxdfGyCcA
 header-image-description: Deploy sustainable networks of devices, applications, and communication systems with zero network config or maintenance.
 header-action-text: VIEW THE EXPLORER
 header-action-link: prenet/
@@ -21,6 +21,6 @@ body-features:
     description: No other trustless network in the world can support the needs of IoT devices and computer applications.  The Diode Network supports communications with as little as 20kB of storage and bandwidth - enabling every level of device capability.
     icon: images/movie.svg
 
-footer-video: https://www.youtube-nocookie.com/embed/Zibg-6CClc4
+footer-video: https://www.youtube-nocookie.com/embed/B-bxdfGyCcA
 ---
 
