--- a/products/diode-network/index.html
+++ b/products/diode-network/index.html
@@ -3,7 +3,7 @@ layout: products
 header-title: Diode Network
 header-description: The world’s only fully trustless communications network
 
-header-image: images/twitter_head.jpg
+header-image: 
 header-video: https://www.youtube-nocookie.com/embed/B-bxdfGyCcA
 header-image-description: Deploy sustainable networks of devices, applications, and communication systems with zero network config or maintenance.
 header-action-text: VIEW THE EXPLORER
