--- a/products/diode-cli/index.html
+++ b/products/diode-cli/index.html
@@ -4,7 +4,7 @@ header-title: Diode CLI
 header-description: Serverless remote access to digital assets
 
 header-image: images/twitter_head.jpg
-header-video: 
+header-video: https://www.youtube-nocookie.com/embed/5jCNOC6mju0?t=707
 header-image-description: Maintain systems in hard-to-access facilities.  Securely publish data streams and web properties.
 header-action-text: TRY DIODE CLI
 header-action-link: resources/download
@@ -22,5 +22,5 @@ body-features:
     description: A serverless streaming service.  The Diode CLI can publish private or public streams of video, or other real-time data, from simple devices (like a Raspberry Pi), camera systems, and computer streaming software.
     icon: images/movie.svg
 
-footer-video: https://www.youtube-nocookie.com/embed/Zibg-6CClc4
+footer-video: https://www.youtube-nocookie.com/embed/B-bxdfGyCcA
 ---
