--- a/products/diode-cli/index.html
+++ b/products/diode-cli/index.html
@@ -3,7 +3,7 @@ layout: products
 header-title: Diode CLI
 header-description: Serverless remote access to digital assets
 
-header-image: images/twitter_head.jpg
+header-image: 
 header-video: https://www.youtube-nocookie.com/embed/5jCNOC6mju0?t=707
 header-image-description: Maintain systems in hard-to-access facilities.  Securely publish data streams and web properties.
 header-action-text: TRY DIODE CLI
