--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@ layout: default
 
 ### Hero Section
 hero-title: Reclaim your digital sovereignity
-hero-subtitle: Share and manage files and internal systems without moving to the cloud
+hero-subtitle: Privately share and manage files and connected assets.
 hero-description: <span class="company-name">Diode<span>TM</span></span> lets you retain the security and privacy of a local area network while enabling the convenience of remote accessibility - all without IT admins.
 
-hero-xs-title: Web3 technologies <br/> for remote productivity
-hero-xs-subtitle: Turn your on-premise system into a hybrid solution overnight.
-hero-xs-description: At Diode, we help businesses, professionals, and individuals to retain the security and privacy of a local area network while enabling mobile sharing and accessibility.
+hero-xs-title: Reclaim your digital sovereignity
+hero-xs-subtitle: Privately share and manage files and connected assets.
+hero-xs-description: <span class="company-name">Diode<span>TM</span></span> lets you retain the security and privacy of a local area network while enabling the convenience of remote accessibility - all without IT admins.
 
 ### Feature Section
 features:
   ### Feature 1
-  - title: Remote Work
+  - title: Private File Sharing
     description: >-
-      Diode is a great choice for businesses and individuals who want to keep their files on their local systems, but need to unlock the efficiencies that come with remote access.  Files are stored on your hard-drive, but can be shared with employees, partners, and customers as easily as cloud-based solutions.  Both native file synchronization and web-based sharing are supported, and permissions can be managed at a granular level.
-    xs-title: Hybrid Systems
-    xs-description: Diode offers a suite of security technologies that make it easy to share files, intranet websites, and network access with partners and employees without exposing your systems to the outside world.  Our serverless technology retains compliance with your existing regulatory regime, and does not require IT support to maintain.  A Diode productivity solution is a great choice for businesses and individuals who want to retain privacy and control, but need to unlock the efficiencies that come with remote access.
+      Diode Drive enables businesses and individuals to keep files on local systems while unlocking the efficiencies that come with remote collaboration and sharing.  Files are synchronized with authenticated peers, and can be shared publicly or privately without requiring an account.  Collaboration is totally private (no user identity required) and file sharing does not require uploading the file to a centralized storage environment.
+    xs-title: Private File Sharing
+    xs-description: Diode Drive enables businesses and individuals to keep files on local systems while unlocking the efficiencies that come with remote collaboration and sharing.  Files are synchronized with authenticated peers, and can be shared publicly or privately without requiring an account.  Collaboration is totally private (no user identity required) and file sharing does not require uploading the file to a centralized storage environment.
     icon: svgs/remote-work.svg
-    link-text: Solutions for remote Work
-    link-url: solutions/remote-work/
+    link-text: See Diode Drive
+    link-url: products/d-drive/
 
   ### Feature 2
   - title: Data Sovereignity
