--- a/resources/how-it-works/index.html
+++ b/resources/how-it-works/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 header-title: How It Works
-header-description: Diode enables the Web3 for everyone
+header-description: Web3 Technologies On a Mission
 
-video: https://www.youtube-nocookie.com/embed/Zibg-6CClc4
+video: https://www.youtube-nocookie.com/embed/B-bxdfGyCcA
 
 section2: 
   title: No Servers, No It Admins
