--- a/resources/how-it-works/index.html
+++ b/resources/how-it-works/index.html
@@ -25,7 +25,7 @@ section3:
 
 section4:
   title: How Communication Works
-  description: The primary use case of the Diode Network is to enable external systems to communicate to other external systems via the network.  This is how it works
+  description: The primary use case of the Diode Network is to enable one edge system to communicate to another edge system via the network.  This is how it works
   items:
     - title: Establish Connection
       description: <p>In order to establish a connection with the network, an entity must have one or more known network node addresses stored in memory.  Upon finding a valid node, the BlockQuick algorithm is used to verify the node is truthfully representing the current state of the network.  If everything is in order a “Fast Sync” can be used (on the order of a few seconds), but if the entity has been disconnected from the network for a very long time, or if there are other inconsistencies, a “Slow Sync” is required.</p><p>Once a connection is established with a verified node, the entity can interact with the network or, if it is part of a Fleet, can communicate via the network to other entities.</p>
