--- a/pricing/index.html
+++ b/pricing/index.html
@@ -20,7 +20,7 @@ plans:
     price:
       yearly: 39
       monthly: 49
-    action: https://
+    action: https://t.me/diode_chain
     items:
       - title: All Nomad +
       - title: Link sharing
@@ -35,7 +35,7 @@ plans:
     price:
       yearly: 159
       monthly: 199
-    action: https://
+    action: https://t.me/diode_chain
     items:
       - title: All Business +
       - title: Data room insights
