--- a/pricing/index.html
+++ b/pricing/index.html
@@ -9,7 +9,8 @@ plans:
     price: 
       yearly: 0
       monthly: 0
-    action: https://
+    action: resources/download
+    action-name: Get Nomad
     items:
       - title: Privately share full drive
       - title: Unlimited shares
@@ -21,6 +22,7 @@ plans:
       yearly: 39
       monthly: 49
     action: https://t.me/diode_chain
+    action-name: Contact Us
     items:
       - title: All Nomad +
       - title: Link sharing
@@ -36,6 +38,7 @@ plans:
       yearly: 159
       monthly: 199
     action: https://t.me/diode_chain
+    action-name: Contact Us
     items:
       - title: All Business +
       - title: Data room insights
