fix: pricing table, hero image, breadcrumbs

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -48,92 +48,84 @@ plans:
 items:
   - title: Drives
     plans:
-      - value: <div class="ammount">1</div><div class="ammount--tip">+ $5 / Drive</div>
-        xs-value: 1 + $5 / Drive
-      - value: <div class="ammount">1</div><div class="ammount--tip">+ $5 / Drive</div>
-        xs-value: 1 + $5 / Drive
-      - value: <div class="ammount">1</div><div class="ammount--tip">+ $20 / Drive</div>
-        xs-value: 1 + $20 / Drive
+      - monthly: <div class="ammount">1</div><div class="ammount--tip">+ $5 / Drive / Mo</div>
+        yearly: <div class="ammount">1</div><div class="ammount--tip">+ $4 / Drive / Mo</div>
+      - monthly: <div class="ammount">1</div><div class="ammount--tip">+ $5 / Drive / Mo</div>
+        yearly: <div class="ammount">1</div><div class="ammount--tip">+ $4 / Drive / Mo</div>
+      - monthly: <div class="ammount">1</div><div class="ammount--tip">+ $20 / Drive / Mo</div>
+        yearly: <div class="ammount">1</div><div class="ammount--tip">+ $16 / Drive / Mo</div>
   - title: Users / Shares
     plans:
-      - value: <div class="has-asterisk">Unlimited</div>
-        xs-value: No 
-      - value: <div class="ammount">10</div><div class="ammount--tip">+ $3 / User</div>
-        xs-value: 10 + $3 / User 
-      - value: <div class="ammount">20</div><div class="ammount--tip">+ $6 / Drive</div>
-        xs-value: 10 + $6 / User 
+      - monthly: <div class="has-asterisk">Unlimited*</div>
+        yearly: <div class="has-asterisk">Unlimited*</div>
+      - monthly: <div class="ammount has-asterisk">10*</div><div class="ammount--tip">+ $3 / User / Mo</div>
+        yearly: <div class="ammount has-asterisk">10*</div><div class="ammount--tip">+ $2 / User / Mo</div>
+      - monthly: <div class="ammount has-asterisk">20*</div><div class="ammount--tip">+ $6 / User / Mo</div>
+        yearly: <div class="ammount has-asterisk">20*</div><div class="ammount--tip">+ $5 / User / Mo</div>
   - title: Storage
     plans:
-      - value: Unlimited
-        xs-value: Unlimited Storage
-      - value: Unlimited
-        xs-value: Unlimited Storage
-      - value: Unlimited
-        xs-value: Unlimited Storage
+      - monthly: Unlimited
+        yearly: Unlimited
+      - monthly: Unlimited
+        yearly: Unlimited
+      - monthly: Unlimited
+        yearly: Unlimited
   - title: Link Sharing
     plans:
-      - value: No
-        xs-value: No
-      - value: Yes
-        xs-value: Link Sharing
-      - value: Data Room
-        xs-value: Link Sharing (Data Room)
+      - monthly: No
+        yearly: No
+      - monthly: Yes
+        yearly: Yes
+      - monthly: Data Room
+        yearly: Data Room
   - title: Web Access
     plans:
-      - value: No
-        xs-value: No
-      - value: Yes
-        xs-value: Web Access
-      - value: Yes
-        xs-value: Web Access
+      - monthly: No
+        yearly: No
+      - monthly: Yes
+        yearly: Yes
+      - monthly: Yes
+        yearly: Yes
   - title: Sub-Folder Permissions
     plans:
-      - value: No
-        xs-value: No
-      - value: Yes
-        xs-value: Sub-Folder Permissions
-      - value: Administrated
-        xs-value: Sub-Folder Permissions (Admin)
+      - monthly: No
+        yearly: No
+      - monthly: Yes
+        yearly: Yes
+      - monthly: Administrated
+        yearly: Administrated
   - title: Versions
     plans:
-      - value: No
-        xs-value: No
-      - value: No
-        xs-value: No
-      - value: Yes
-        xs-value: Versions
+      - monthly: No
+        yearly: No
+      - monthly: No
+        yearly: No
+      - monthly: Yes
+        yearly: Yes
   - title: Backup / Headless
     plans:
-      - value: Via Share
-        xs-value: Via Share (Backup / Headless)
-      - value: On Premise
-        xs-value: On Premise (Backup / Headless)
-      - value: Hosted
-        xs-value: Hosted (Backup / Headless)
-  - title: Web Access
-    plans:
-      - value: No
-        xs-value: No
-      - value: Yes
-        xs-value: Web Access
-      - value: Yes
-        xs-value: Web Access
+      - monthly: Via Share
+        yearly: Via Share
+      - monthly: On Premise
+        yearly: On Premise
+      - monthly: Hosted
+        yearly: Hosted
   - title: QOS
     plans:
-      - value: Per Availability
-        xs-value: Per Availability (QOS)
-      - value: Basic
-        xs-value: Basic (QOS)
-      - value: Premium
-        xs-value: Premium (QOS)
+      - monthly: Per Availability
+        yearly: Per Availability
+      - monthly: Basic
+        yearly: Basic
+      - monthly: Premium
+        yearly: Premium
   - title: Support
     plans:
-      - value: None
-        xs-value: None
-      - value: Basic
-        xs-value: Basic Support
-      - value: Premium
-        xs-value: Premium Support
+      - monthly: None
+        yearly: None
+      - monthly: Basic
+        yearly: Basic
+      - monthly: Premium
+        yearly: Premium
 
 ---
 
