--- a/pricing/index.html
+++ b/pricing/index.html
@@ -16,6 +16,18 @@ plans:
       - title: Unlimited shares
       - title: Unlimited storage
 
+  - title: Freelancer
+    description: Great fit for independent professionals.
+    price: 
+      yearly: 1.60
+      monthly: 2
+    action: resources/download
+    action-name: Contact Us
+    items:
+      - title: Privately share full drive
+      - title: Unlimited shares
+      - title: Unlimited storage
+
   - title: Business
     description: Perfect for small businesses and multi-site operations.
     price:
